--- a/package.json
+++ b/package.json
@@ -54,7 +54,9 @@
     "eslint-plugin-ember": "^10.2.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.3.1",
+    "faker": "^5.4.0",
     "loader.js": "^4.7.0",
+    "luxon": "^1.26.0",
     "npm-run-all": "^4.1.5",
     "prettier": "^2.2.1",
     "qunit": "^2.14.0",
